[gd_scene load_steps=4 format=3 uid="uid://bo6yvrohvdk8a"]

[ext_resource type="Script" uid="uid://csykqesal1mr5" path="res://start_menu.gd" id="1_gqihx"]
[ext_resource type="Texture2D" uid="uid://temu725g8sre" path="res://textures/CoastPreview.png" id="2_rr6mw"]
[ext_resource type="Texture2D" uid="uid://cyp4nna27um7" path="res://textures/icon.svg" id="3_rr6mw"]

[node name="LevelSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqihx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0.20412439, 0.0005192345, 0.44262058, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 66.0
offset_right = 589.0
offset_bottom = 89.0
text = "Select Track"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 399.0
offset_top = 93.0
offset_right = 694.0
offset_bottom = 344.0

[node name="leftTrack" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Preview" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_rr6mw")
expand_mode = 2

[node name="rightTrack" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = ">
"

[node name="playButton" type="Button" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 437.0
offset_right = 638.0
offset_bottom = 619.0
text = "PLAY"
icon = ExtResource("3_rr6mw")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="TrackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 479.0
offset_top = 348.0
offset_right = 626.0
offset_bottom = 397.0
text = "placeholder
"
horizontal_alignment = 1
